# HPC

./: README.md
Practical1/: CMakeLists.txt  hello.cxx  mandel.cxx  pi_Integral.cxx  pi_MonteCarlo.cxx
Practical2/: CMakeLists.txt  matrix_product.cxx  max_subarray.cxx
Practical3/String/: CMakeLists.txt  string_equation.cxx
Practical4/: CMakeLists.txt  file_io.cxx  kmeans.h  seq_kmeans.cxx  seq_main.cxx
Practical4/Image_data/: CMakeCache.txt  small.txt  tiny.txt  tiny.txt.clusters_centers  tiny.txt.membership
SPractical1/: CMakeLists.txt  hello_omp.cxx  mandel_omp.cxx  pi_Integral_omp.cxx  pi_MonteCarlo_omp.cxx
SPractical2/: CMakeLists.txt  matrix_product.cxx  max_subarray_omp.cxx  max_subarray_opt.cxx
Spractical3/: CMakeLists.txt  string_equation.cxx  string_equation_omp_v1.cxx  string_equation_omp_v2.cxx  string_equation_omp_v3.cxx
